Se suben los siguientes cambios:
1. Soporte a log de auditoria, nueva versión.
2. Ajustes para cumplimiento métricas de SONAR.
3. Lectura de los mensajes de error del SCA.