@@ -14,6 +14,8 @@ import com.novatronic.masivas.backoffice.exception.GenericException;
 import com.novatronic.masivas.backoffice.exception.JasperReportException;
 import com.novatronic.masivas.backoffice.exception.NoOperationExistsException;
 import com.novatronic.masivas.backoffice.exception.UniqueFieldException;
+import com.novatronic.novalog.audit.util.Estado;
+import com.novatronic.novalog.audit.util.Evento;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import com.novatronic.masivas.backoffice.repository.GrupoParametroRepository;
@@ -292,7 +294,7 @@ public class GrupoParametroService {
         return listaGrupoParametro.stream()
                 .map(grupo -> new ParametroDTO(String.valueOf(grupo.getIdGrupoParametro()), grupo.getDescripcion()))
                 .sorted(Comparator.comparing(p -> Long.valueOf(p.getCodigo())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void updateGrupoParametro(TpGrupoParametro grupoParametro, MasivasRequestDTO request, String usuario, String operacion) {
@@ -312,9 +314,9 @@ public class GrupoParametroService {
         LOGGER.info(mensaje, param);
     }
 
-    public <T> void logAuditoria(T request, UserContext userContext, String mensajeExito) {
-        LOGGER.auditSuccess(null, request,userContext.getUsername(),userContext.getScaProfile(),
-                userContext.getIp(), ConstantesServices.VACIO,mensajeExito,ConstantesServices.RESPUESTA_OK_API);
+    public <T> void logAuditoria(T request, Evento idEvento, Estado estado, UserContext userContext, String recursoAfectado, String origen, String mensajeRespuesta, String codigoRespuesta) {
+        LOGGER.audit(null, request, idEvento, estado, userContext.getUsername(), userContext.getScaProfile(), recursoAfectado, userContext.getIp(),
+                ConstantesServices.VACIO, origen, null, null, mensajeRespuesta, codigoRespuesta);
     }
 
 }
